--- a/Dockerfile.instance
+++ b/Dockerfile.instance
@@ -1,7 +1,7 @@
 FROM golang:1.22
 
 WORKDIR /app
-COPY *.go ./
+COPY ./cmd/instance/main.go ./instance.go
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o instance instance.go
 CMD ["mkdir" "/tmp"]
-ENTRYPOINT ["./instance"]
+ENTRYPOINT ["/app/instance"]
