--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         environment:
             - HOST=
             - PORT=8083
-            - INSTANCES=request-count_instance_1:8083,request-count_instance_2:8083
+            - INSTANCES=count_instance_1:8083,count_instance_2:8083,count_instance_3:8083
 # TODO: approach INSTANCES in a more scalable way
         ports:
             - 127.0.0.1:8083:8083
