--- a/Dockerfile.instance
+++ b/Dockerfile.instance
@@ -1,5 +1,8 @@
-FROM golang:1.22
+FROM golang:1.22-bookworm
 
+# RUN apt update -y
+# RUN apt upgrade -y
+# RUN apt install -y netcat-openbsd
 WORKDIR /app
 COPY ./cmd/instance/main.go ./instance.go
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o instance instance.go
