communication between entry and instance
will change the application a bit to work nicer with k8s

--- a/devopsing/entry.yaml
+++ b/devopsing/entry.yaml
@@ -19,7 +19,7 @@ spec:
         - containerPort: 8083
         env:
         - name: INSTANCES
-          value: ":8084,:8085,:8086"
+          value: "INSTANCE_IP:8083"
         - name: HOST
           value: ""
         - name: PORT
