working deployed app with helm

--- a/request-count/templates/deployment-instance.yaml
+++ b/request-count/templates/deployment-instance.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.containerNameInstance }}
-        image: "{{ .Values.imageInstance.repository }} # :{{ .Values.imageInstance.tag | default .Chart.AppVersion }}"
+        image: {{ .Values.imageInstance.repository }}
         ports:
         - containerPort: {{ .Values.serviceInstance.port }}
         env:
