--- a/request-count/values.yaml
+++ b/request-count/values.yaml
@@ -1,5 +1,3 @@
-instanceClusterIP: &instanceClusterIP 10.109.95.97
-
 fullnameInstance: instance
 labelsInstance: {"app": "instance"}
 selectorLabelsInstance: {"app": "instance"}
@@ -7,7 +5,7 @@ containerNameInstance: instance-container
 
 replicaCountInstance: 3
 imageInstance:
-  repository: localhost:5000/instance
+  repository: localhost:5000/count_instance
   pullPolicy: IfNotPresent
   tag: ""
 
@@ -18,7 +16,7 @@ serviceInstance:
 
 envInstance: [{"name": "HOST", "value": ""}, {"name": "PORT", "value": "8083"}]
 
-# ----
+# ---
 
 fullnameEntry: entry
 labelsEntry: {"app": "entry"}
@@ -27,7 +25,7 @@ containerNameEntry: entry-container
 
 replicaCountEntry: 1
 imageEntry:
-  repository: localhost:5000/entry
+  repository: localhost:5000/count_entry
   pullPolicy: IfNotPresent
   tag: ""
 
@@ -43,15 +41,6 @@ envEntry: [
   {"name": "PORT", "value": "8083"}
 ]
 
+# ---
 
-livenessProbe:
-  httpGet:
-    path: /health
-    port: http
-readinessProbe:
-  httpGet:
-    path: /ready
-    port: http
-
-ingress: 
-  enabled: false
+instanceClusterIP: &instanceClusterIP 10.109.95.97
